# engineer

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: index.md
docs/api/: index.md
docs/book-guide/: index.md
docs/getting-started/: installation.md  quickstart.md
docs/overrides/: main.html
docs/overrides/assets/javascripts/: ml4t-docs-theme.js
docs/overrides/assets/stylesheets/: ml4t-docs-theme.css
docs/overrides/partials/: footer.html  logo.html
docs/user-guide/: bars.md  dataset-builder.md  discovery.md  features.md  fractional-differencing.md  labeling.md  ml-readiness.md  preprocessing.md
src/ml4t/engineer/: AGENTS.md  __init__.py
src/ml4t/engineer/artifacts/: AGENTS.md
src/ml4t/engineer/bars/: AGENTS.md
src/ml4t/engineer/config/: AGENTS.md  __init__.py  spec_bridge.py
src/ml4t/engineer/core/: AGENTS.md
src/ml4t/engineer/core/calendars/: AGENTS.md
src/ml4t/engineer/discovery/: AGENTS.md
src/ml4t/engineer/features/: AGENTS.md
src/ml4t/engineer/features/math/: AGENTS.md
src/ml4t/engineer/features/microstructure/: AGENTS.md
src/ml4t/engineer/features/ml/: AGENTS.md
src/ml4t/engineer/features/momentum/: AGENTS.md
src/ml4t/engineer/features/price_transform/: AGENTS.md
src/ml4t/engineer/features/statistics/: AGENTS.md
src/ml4t/engineer/features/trend/: AGENTS.md
src/ml4t/engineer/features/utils/: AGENTS.md
src/ml4t/engineer/features/volatility/: AGENTS.md
src/ml4t/engineer/features/volume/: AGENTS.md
src/ml4t/engineer/labeling/: AGENTS.md
src/ml4t/engineer/logging/: AGENTS.md
src/ml4t/engineer/relationships/: AGENTS.md
src/ml4t/engineer/store/: AGENTS.md
src/ml4t/engineer/utils/: AGENTS.md
tests/: test_data_contract_config.py
