# ML4T Engineer - Institutional-grade quantitative finance feature engineering
# Independent package configuration for standalone distribution

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/ml4t/engineer/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ml4t"]
namespaces = true
# Include AGENT.md files for agent navigation
artifacts = ["src/ml4t/**/AGENT.md"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
]

[project]
name = "ml4t-engineer"
dynamic = ["version"]
description = "High-performance quantitative finance feature engineering library"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Stefan Jansen", email = "stefan@ml4trading.io" },
]
maintainers = [
    { name = "Stefan Jansen", email = "stefan@ml4trading.io" },
]
keywords = [
    "finance",
    "features",
    "feature-engineering",
    "machine-learning",
    "trading",
    "backtesting",
    "quantitative-finance",
    "technical-analysis",
    "microstructure",
    "labeling",
    "polars",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
requires-python = ">=3.11"

# Core dependencies
dependencies = [
    # Data processing (Polars-first)
    "polars>=0.20.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0,<2.3",
    "pyarrow>=14.0.0",

    # Scientific computing
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0",

    # Performance optimization
    "numba>=0.57.0",

    # Configuration
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",

    # Utilities
    "structlog>=23.0.0",
    "python-dateutil>=2.8.0",

    # Visualization
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
# Technical analysis libraries
ta = [
    "ta-lib>=0.4.0",
]

# Feature store with DuckDB
store = [
    "duckdb>=0.9.0",
]

# Trading calendar support
calendars = [
    "pandas-market-calendars>=4.0.0",
]

# Visualization and plotting
viz = [
    "plotly>=5.15.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

# ML diagnostics
ml = [
    "lightgbm>=4.0.0",
    "shap>=0.44.0",
]

# Development tools
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "pytest-timeout>=2.1.0",
    "pytest-benchmark>=4.0.0",
    "hypothesis>=6.80.0",
    "ruff>=0.1.0",
    "ipython>=8.14.0",
    "ipdb>=0.13.0",
    "pre-commit>=3.3.0",
    "duckdb>=0.9.0",
    "pandas-market-calendars>=4.0.0",
    "ta-lib>=0.4.0",
    "yfinance>=0.2.0",
    "lightgbm>=4.0.0",
    "shap>=0.44.0",
    "arch>=6.0.0",
]

# Documentation generation
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

# Complete installation
all = [
    "ta-lib>=0.4.0",
    "duckdb>=0.9.0",
    "pandas-market-calendars>=4.0.0",
    "plotly>=5.15.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "lightgbm>=4.0.0",
    "shap>=0.44.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "pytest-timeout>=2.1.0",
    "pytest-benchmark>=4.0.0",
    "hypothesis>=6.80.0",
    "ruff>=0.1.0",
    "ipython>=8.14.0",
    "ipdb>=0.13.0",
    "pre-commit>=3.3.0",
    "arch>=6.0.0",
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/stefan-jansen/ml4t-engineer"
Documentation = "https://ml4t.github.io/engineer/"
Repository = "https://github.com/stefan-jansen/ml4t-engineer"
Issues = "https://github.com/stefan-jansen/ml4t-engineer/issues"
Changelog = "https://github.com/stefan-jansen/ml4t-engineer/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "pytest-timeout>=2.1.0",
    "pytest-benchmark>=4.0.0",
    "hypothesis>=6.80.0",
    "ruff>=0.8.0",
    "ty",
    "pre-commit>=3.3.0",
    "twine>=6.0.0",
    "pandas-market-calendars>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "-m", "not perf",
    "--capture=no",  # Disable capture to avoid crash with numba/numpy on Python 3.13
    "--cov=ml4t.engineer",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "benchmark: marks benchmark tests",
    "perf: marks performance comparison tests (excluded from default runs, use pytest -m perf)",
    "validation: marks tests that validate against TA-Lib",
    "property: marks property-based tests using hypothesis",
]

[tool.ruff]
line-length = 100
target-version = "py311"
fix = true
exclude = ["_version.py"]  # Auto-generated by setuptools-scm

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "ARG",
    "SIM",
]
ignore = [
    "E501",   # Line too long
    "B008",   # Function call in default argument
    "B905",   # zip without explicit strict
    "SIM108", # Ternary operator (prefer readability of if/else blocks)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402", "ARG002", "B017", "F841"]

[tool.ty.environment]
python-version = "3.11"
root = ["src"]

[tool.ty.src]
include = ["src"]
exclude = ["tests", "benchmarks", "examples", "docs"]

[tool.ty.rules]
unused-type-ignore-comment = "ignore"  # mypy type: ignore comments not recognized by ty
invalid-assignment = "ignore"
unsupported-operator = "ignore"
invalid-argument-type = "ignore"
unresolved-import = "ignore"
invalid-return-type = "ignore"
unresolved-attribute = "ignore"

[tool.coverage.run]
source = ["src/ml4t/engineer"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
    "except ImportError:",
]
